--- a/src/components/CardContent/CardContent.module.css
+++ b/src/components/CardContent/CardContent.module.css
@@ -1,13 +1,13 @@
 h1 {
 	font-size: 1rem;
-	margin: auto;
 	padding: 0;
+	margin: 0.25rem 0rem;
 }
 
 h2 {
 	font-size: 0.75rem;
-	margin: auto;
 	padding: 0;
+	margin: 0.25rem 0rem;
 }
 
 .cardContentContainer {
@@ -18,20 +18,20 @@ h2 {
 	height: 10rem;
 	background-color: #edf2f7;
 	width: 70vw;
-	margin: auto;
+	/* margin: auto; */
 	padding: 0;
 }
 
 .cardStory {
 	font-size: 0.75rem;
 	font-style: italic;
-	margin: auto;
 	padding: 0;
+	margin: 0.25rem 0rem;
 }
 
 .cardDate {
 	font-size: 0.5rem;
 	color: #8c9aad;
-	margin: auto;
 	padding: 0;
+	margin: 0.25rem 0rem;
 }
