--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	margin: 0.25rem 0rem;
+	margin: 0.5rem 0rem;
 	max-width: 1000px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
