--- a/src/components/CardContent/CardContent.module.css
+++ b/src/components/CardContent/CardContent.module.css
@@ -19,7 +19,7 @@ h2 {
 	background-color: #edf2f7;
 	width: 70vw;
 	/* margin: auto; */
-	padding: 0;
+	padding: 0rem 1.5rem;
 }
 
 .cardStory {
@@ -34,4 +34,6 @@ h2 {
 	color: #8c9aad;
 	padding: 0;
 	margin: 0.25rem 0rem;
+	text-align: right;
+	font-style: italic;
 }
