--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,9 +4,12 @@
 	background-color: #334256;
 	height: 2rem;
 	width: 100%;
-	bottom: 0;
-	position: absolute;
-	margin: 0;
+	/* position: absolute; */
+	/* bottom: 0; */
+	/* margin: 0; */
+	position: relative;
+	z-index: 10;
+	/* margin-top: -2em; */
 }
 
 .footerText {
