--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -12,8 +12,8 @@
 }
 
 .contentContainer {
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	align-content: center;
+	align-content: center; */
 	min-height: calc(100vh - 6rem);
 }
