--- a/react-frontend/src/components/Header/Menu/Button/Button.module.css
+++ b/react-frontend/src/components/Header/Menu/Button/Button.module.css
@@ -8,7 +8,7 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.highlighted-button {
+.menu-button--highlighted {
 	border: 2px solid #efb530;
 	transition: 0.25s;
 }
