--- a/client/src/components/Content/Content.module.css
+++ b/client/src/components/Content/Content.module.css
@@ -12,8 +12,9 @@
 }
 
 .content {
-	/* display: flex;
+	display: flex;
 	flex-direction: column;
-	align-content: center; */
+	/* align-items: center; */
 	min-height: calc(100vh - 6rem);
+	margin: 0;
 }
